--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,11 @@ endif()
 
 # Create the library -fno-exceptions
 include_directories("src")
-set (CMAKE_CXX_FLAGS "-fno-rtti -std=c++11 -Wall")
+
+set(CMAKE_CXX_FLAGS "-fno-rtti -std=c++11 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0") # debug, no optimisation
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage") # enabling coverage
+
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE HEADERS "src/*.hpp")
 
