--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,42 @@
-sudo: required
-dist: precise
 language: cpp
 
-matrix:
-  include:
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env: COMPILER=g++-4.9
+before_install:
+# for gcc with C++11 support
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo apt-get -qq update
 
 install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq build-essential cmake curl lcov
-  - gem install coveralls-lcov
+# install GTest and GMock
+- sudo apt-get -qq install libgtest-dev
+- "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
+- sudo apt-get -qq install google-mock
+- "cd /usr/src/gmock && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
+# update to gcc with C++11 support
+- sudo apt-get -qq install gcc-4.9 g++-4.9
+- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+- sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
+# install latest LCOV (1.9 was failing)
+- cd ${TRAVIS_BUILD_DIR}
+- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+- tar xf lcov_1.11.orig.tar.gz
+- sudo make -C lcov-1.11/ install
+- gem install coveralls-lcov
+- lcov --version
+- g++ --version
 
 before_script:
-  - export CXX=$COMPILER
-  - git submodule update --init
-  - mkdir build
-  - cd build
-  - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
+- cd ${TRAVIS_BUILD_DIR}
+- lcov --directory . --zerocounters
 
 script:
-  - cmake --build .
-  - cmake --build . --target coveralls
+- cd ${TRAVIS_BUILD_DIR}
+- cmake .
+- make
+- ctest --verbose
 
 after_success:
-  - lcov --directory . --capture --output-file coverage.info
-  - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
-  - lcov --list coverage.info
-  - coveralls-lcov coverage.info
-
-notifications:
-  email: false
+- cd ${TRAVIS_BUILD_DIR}
+- lcov --directory . --capture --output-file coverage.info
+- lcov --remove coverage.info 'test/*' '/usr/*' --output-file coverage.info
+- lcov --list coverage.info
+- coveralls-lcov coverage.info
