--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ script:
 after_success:
 - cd ${TRAVIS_BUILD_DIR}
 - lcov --directory . --capture --output-file coverage.info
-- lcov --remove coverage.info 'test/*' '/usr/*' --output-file coverage.info
+- lcov --remove coverage.info 'test/*' '/usr/*' 'googletest-src/*' --output-file coverage.info
 - lcov --list coverage.info
 - coveralls-lcov coverage.info
