--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,6 @@ before_install:
 - sudo apt-get -qq update
 
 install:
-# install GTest and GMock
-- sudo apt-get -qq install libgtest-dev
-- "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
-- sudo apt-get -qq install google-mock
-- "cd /usr/src/gmock && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
 # update to gcc with C++11 support
 - sudo apt-get -qq install gcc-4.9 g++-4.9
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
@@ -20,9 +15,8 @@ install:
 - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
 - tar xf lcov_1.11.orig.tar.gz
 - sudo make -C lcov-1.11/ install
+# install coveralls-lcov
 - gem install coveralls-lcov
-- lcov --version
-- g++ --version
 
 before_script:
 - cd ${TRAVIS_BUILD_DIR}
