--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: cpp
 
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+
 before_install:
-# for gcc with C++11 support
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get -qq update
 
 install:
-# update to gcc with C++11 support
-- sudo apt-get -qq install gcc-4.9 g++-4.9
-- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
-- sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
-# install latest LCOV (1.9 was failing)
-- cd ${TRAVIS_BUILD_DIR}
-- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-- tar xf lcov_1.11.orig.tar.gz
-- sudo make -C lcov-1.11/ install
-# install coveralls-lcov
+- sudo apt-get install -y -qq build-essential cmake lcov
 - gem install coveralls-lcov
 
 before_script:
