--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,12 @@ install:
 - sudo apt-get -qq install gcc-4.9 g++-4.9
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
 - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
-- sudo apt-get install -y -qq lcov 
+# install latest LCOV (1.9 was failing)
+- cd ${TRAVIS_BUILD_DIR}
+- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.13.orig.tar.gz
+- tar xf lcov_1.13.orig.tar.gz 
+- sudo make -C lcov-1.13/ install
+# install coveralls-lcov
 - gem install coveralls-lcov
 
 before_script:
