Removing unecessary cpp files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,13 +34,14 @@ endif()
 # target_link_libraries(example gtest_main)
 # add_test(NAME example_test COMMAND example)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -std=c++11 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0") # debug, no optimisation
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage") # enabling coverage
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src/)
 
+enable_testing()
 file(GLOB_RECURSE TEST_SOURCES "*.cpp")
 add_executable(gluino_test ${TEST_SOURCES})
 target_link_libraries(gluino_test gluino gtest_main)
