Keep the library staticly linked for correct coverage

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,4 +18,8 @@ foreach(f ${SOURCES})
     source_group("${SRCGR}" FILES ${f})
 endforeach()
 
-add_library(gluino STATIC ${SOURCES})
+if (CMAKE_COMPILER_IS_GNUCXX)
+  add_library(gluino SHARED ${SOURCES})
+else()
+  add_library(gluino STATIC ${SOURCES})
+endif()
