Excluding catch and fakeit from the coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ script:
 after_success:
 - cd ${TRAVIS_BUILD_DIR}
 - lcov --directory . --capture --output-file coverage.info
-- lcov --remove coverage.info '**/usr/*' '**/test/*' '**/googletest-src/*' --output-file coverage.info
+- lcov --remove coverage.info '**/usr/*' '**/test/*' '**/catch/*' '**/fakeit/*' --output-file coverage.info
 - lcov --list coverage.info
 - coveralls-lcov coverage.info
