--- a/test/CMakeLists.txt.in
+++ b/test/CMakeLists.txt.in
@@ -6,7 +6,7 @@ include(ExternalProject)
 
 ExternalProject_Add(catch
   GIT_REPOSITORY    https://github.com/catchorg/Catch2.git
-  GIT_TAG           master
+  GIT_TAG           v2.0.1
   SOURCE_DIR        "${CMAKE_BINARY_DIR}/catch"
   BINARY_DIR        ""
   CONFIGURE_COMMAND ""
